--- a/Sp5VueEx/src/main/webapp/resources/index.html
+++ b/Sp5VueEx/src/main/webapp/resources/index.html
@@ -10,6 +10,9 @@
     <title>Dashboard Template for Bootstrap</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/dashboard.css" rel="stylesheet">
+    <link href="/css/awesome-all.css" rel="stylesheet">
+    <script src="/js/jquery-3.5.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/js/ie-emulation-modes-warning.js"></script>
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.min.js"></script>
