--- a/Sp5VueEx/src/main/webapp/resources/index.html
+++ b/Sp5VueEx/src/main/webapp/resources/index.html
@@ -8,12 +8,17 @@
     <meta name="author" content="">
 
     <title>Dashboard Template for Bootstrap</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/dashboard.css" rel="stylesheet">
-    <link href="/css/awesome-all.css" rel="stylesheet">
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/ie-emulation-modes-warning.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="/css/awesome-all.css">
+    <link rel="stylesheet" href="/wysiwyg/dist/summernote.css" />
+    <script type="text/javascript" src="/js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/ie-emulation-modes-warning.js"></script>
+    <script type="text/javascript" src="/wysiwyg/popper-1.14.5.js"></script>
+    <script type="text/javascript" src="/wysiwyg/dist/summernote.js"></script>
+    <script type="text/javascript" src="/wysiwyg/lang/summernote-ko-KR.js"></script>
+    <script type="text/javascript" src="/js/summernoteUtil.js"></script>
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.min.js"></script>
       <script src="/js/respond.min.js"></script>
