--- a/Sp5VueEx/src/main/webapp/resources/index.html
+++ b/Sp5VueEx/src/main/webapp/resources/index.html
@@ -10,7 +10,7 @@
     <title>Dashboard Template for Bootstrap</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/dashboard.css">
-    <link rel="stylesheet" href="/css/awesome-all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
     <link rel="stylesheet" href="/wysiwyg/dist/summernote.css" />
     <script type="text/javascript" src="/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
