--- a/Sp5VueEx/src/main/webapp/resources/index.html
+++ b/Sp5VueEx/src/main/webapp/resources/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/wysiwyg/popper-1.14.5.js"></script>
     <script type="text/javascript" src="/wysiwyg/dist/summernote.js"></script>
     <script type="text/javascript" src="/wysiwyg/lang/summernote-ko-KR.js"></script>
+    <script type="text/javascript" src="/js/vue-i18n.js"></script>
     <script type="text/javascript" src="/js/summernoteUtil.js"></script>
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.min.js"></script>
