--- a/Sp5VueEx/src/main/webapp/resources/index.html
+++ b/Sp5VueEx/src/main/webapp/resources/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="/wysiwyg/lang/summernote-ko-KR.js"></script>
     <script type="text/javascript" src="/js/vue-i18n.js"></script>
     <script type="text/javascript" src="/js/summernoteUtil.js"></script>
+    <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.min.js"></script>
       <script src="/js/respond.min.js"></script>
@@ -29,5 +30,15 @@
   <body>
     <div id="app"></div>
     <script src="/vue/dist/build.js"></script>
+    <div id="naver_id_login" style="display:none;"></div>
+    <script type="text/javascript">
+      var naver_id_login = new naver_id_login("w_Ear77mJxBPfzwNE7AX", "http://localhost/vue/callback.html");
+      var state = naver_id_login.getUniqState();
+      naver_id_login.setButton("white", 2,40);
+      naver_id_login.setDomain("http://localhost");
+      naver_id_login.setState(state);
+      naver_id_login.setPopup();
+      naver_id_login.init_naver_id_login();
+    </script>
   </body>
 </html>
